# xdk

./: Makefile  README  README.md  build.sh  configure
doc/: ExokernelIntroduction.doc  kernel.txt
drivers/ahci/: Makefile  ahci_device.cc  ahci_device.h  ahci_fis.h  ahci_hw.h  ahci_port.cc  ahci_port.h  ahci_sata.h  ahci_types.h  config.h  debug.cc  debug.h  main.cc  qemu_setup.sh
drivers/e1000/: Makefile  README  e1000.h  e1000_card.cc  e1000_card.h  main.cc
drivers/nvme/: Makefile  TAGS  config.h  config.xml  cq_thread.cc  cq_thread.h  main.cc  notify.h  nvme_command.cc  nvme_command.h  nvme_command_admin.cc  nvme_command_admin.h  nvme_command_io.h  nvme_command_structs.h  nvme_common.cc  nvme_device.h  nvme_queue.cc  nvme_queue.h  nvme_registers.h  nvme_types.h
drivers/nvme-ssd/: DEPS  Makefile  blast_test.cc  config.16queues.xml  config.29queues.xml  config.4queues.xml  config.h  config.xml  config2.xml  cq_thread.cc  cq_thread.h  grant-qemu.sh  grant.sh  main.cc  mt-tests.cc  mt_tests.cc  notify.h  nvme_batch_manager.h  nvme_command.cc  nvme_command.h  nvme_command_admin.cc  nvme_command_admin.h  nvme_command_io.h  nvme_common.cc  nvme_common.h  nvme_device.cc  nvme_device.h  nvme_drv_component.cc  nvme_drv_component.h  nvme_queue.cc  nvme_queue.h  nvme_registers.h  nvme_registers_wrappers.h  nvme_types.h  old-main.cc  qemu_setup.sh  test_client.cc  tests.cc  tests.h  verify_tests.cc  (+1 more)
drivers/raw-nic/: Makefile  driver_config.h  dump_mcd.h  main.cc  mem_component.cc  nic_component.cc  raw_device.cc  raw_device.h  raw_threads.h  run.sh
drivers/udp-socket/: Makefile  config.xml.tmpl  dump_mcd.h  run.sh  (+12 more)
mk/: configure  configure.ac  global.mk  global.mk.in
mk/autom4te.cache/: output.0  traces.0
net/: README.txt  msg_processor.h  protocol.h  tcp.h  udp.h
tools/: detach.sh  gpl_v2.header  lgpl.header  null.header  showirq.sh  ubuntu-get-deps.sh
(+296 files in other folders)
